K1J-1642: Cleaned CS active profile check, GRP, PU and Customer Portal V1 (V2 active) (#1270)
Co-authored-by: Lucas Lundström <lucas.lundstroem@soprasteria.com>